fix(Table): should support for aligning table headers when the table is nested

--- a/components/table/main.scss
+++ b/components/table/main.scss
@@ -179,7 +179,9 @@
             word-break: break-word;
         }
     }
-
+    #{$table-prefix}-expanded-area {
+        background: $table-th-bg;
+    }
     #{$table-prefix}-expanded,
     #{$table-prefix}-selection {
         #{$table-prefix}-cell-wrapper {
